# IoT_Project_Group-F

./: .gitignore  CAMERA_TEST_GUIDE.md  CHANGES.md  CMakeLists.txt  README.md  centerline_module.hpp  main.cpp  pure_pursuit_controller.hpp  readme.md  safety_monitor.hpp  test_camera_remote.ps1  workprocess.md
Workprocess/: workprocess.md
config/: system.yaml
include/: ble_manager.hpp  tracking_module.hpp
include/ble/: BLEInterface.h
include/camera/: CameraInterface.h  OpenCVCamera.h
include/control/: Controller.h
include/perception/: PerceptionTypes.h  TrackDetector.h
include/safety/: SafetySupervisor.h
include/system/: SharedState.h  TimeUtils.h
scripts/: build.sh  test_camera.sh
src/: main.cpp
src/ble/: DummyBLE.cpp
src/camera/: OpenCVCamera.cpp
src/control/: Controller.cpp
src/perception/: TrackDetector.cpp
src/safety/: SafetySupervisor.cpp
tests/: test_camera_full.cpp
